# party_assistant

./: README.MD
app/: .coverage  .gitignore  pyproject.toml
app/config/: settings.py  urls.py
app/dishes/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
app/dishes/migrations/: 0001_initial.py
app/dishes/templates/dishes/: dishes.html
app/templates/: base.html
app/templates/partials/: navbar.html
app/users/: admin.py
app/users/migrations/: 0001_initial.py
app/utilities/: dishcore_model.py  dishmark_model.py
