[tool.poetry]
name = "party assistant"
version = "0.1.0"
description = ""
authors = ["Blazej Bielski <bbielski@lyck.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.3"
black = "23.7.0"
flake8 = "6.0.0"
pytest = "7.4.0"
pytest-django = "4.5.2"
pytest-cov = "4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
